--- a/_posts/2018-09-10-post.md
+++ b/_posts/2018-09-10-post.md
@@ -14,7 +14,7 @@ End : 2018-09-09
 
 ## blog project
 
-> Front-End - React, Immutable.js Moment.js
+### Front-End - React, Immutable.js Moment.js
 
 * **node-sass, sass-loader**: yarn add node-sass sass-loader
 
@@ -72,7 +72,7 @@ End : 2018-09-09
 
   - head 태그를 보다 쉽게 작성.
 
-> Back-End - Node.js
+### Back-End - Node.js
 
 * **Koa framework**
 
@@ -81,7 +81,7 @@ End : 2018-09-09
     - 백엔드 서버에서 세션을 사용하기 위한 라이브러리.
 
 
-> Database - mongoDB: homebrew update, homebrew install mongodb 
+### Database - mongoDB: homebrew update, homebrew install mongodb 
 
 * **mLab**: https://mlab.com/
 
@@ -91,7 +91,7 @@ End : 2018-09-09
 
   - **dotenv**: 환경변수들을 파일에 넣고 사용할 수 있게 하는 개발도구. root path에 .env 파일을 생성해서 사용.
 
-> Etc
+### Etc
 * **joi**: yarn add joi
 
   - 객체 검증을 위한 라이브러리: https://github.com/hapijs/joi 
@@ -118,12 +118,12 @@ End : 2018-09-09
   - 문자열 형태의 URL 쿼리를 객체 형태로 변환할수 있고, 반대로 객체 형태를 문자열 형태로 변환도 가능. v6은 구형 브라우저에서 지원 안됨.
 
 
-> How to build
+### How to build
 
 * yarn build
 
 * yarn build:server
 
-> How to start in local
+### How to start in local
 
 * yarn start
