--- a/_posts/2018-12-27-2018memoir.md
+++ b/_posts/2018-12-27-2018memoir.md
@@ -48,12 +48,12 @@ featured-img: sleek
 
 ## 2019년 목표
 
-- [] 자바스크립트에 대한 심도있는 공부
+- 자바스크립트에 대한 심도있는 공부
 
-- [] 자바스크립트로 풀스텍 개발자가 되기
+- 자바스크립트로 풀스텍 개발자가 되기
 
-- [] 사이드프로젝트 진행(1달에 하나씩 하면 좋겠지만 힘들겠지?)
+- 사이드프로젝트 진행(1달에 하나씩 하면 좋겠지만 힘들겠지?)
 
-- [] 개발서적 월 1권씩은 읽기(집에 사둔 책부터 읽기)
+- 개발서적 월 1권씩은 읽기(집에 사둔 책부터 읽기)
 
 더 쓰고 싶은데 졸려서 안되겠다. 올해도 고생했고 원하는 만큼 성장한 개발자가 되지는 못했지만 내년에는 더 열심히 해서 꼭 내가 생각하고 있는 레벨의 개발자가 될수 있도록 하고 싶다.
